Changes since 0.1.13:

* 0refresh can be given a path and a date (like 0run), and only does
  the refresh if the path isn't recent enough.

Changes since 0.1.12:

* Support compiling with older Linux 2.4.18 kernels (Joachim Kupke).

* New /bin/0run program to be used in scripts, eg:
	#!/bin/0run example.com/myprog 2003-01-01

* 0refresh can be given a hostname argument to use instead of using `pwd`.

* New --verbose option for zero-install.

* Fix crash when fetching a top-level file.

* Fixed dentry leaks in lazyfs.

* Lazyfs now notices updates to directories without needing them to be
  explicitly opened.

* When a directory has changed size or mtime, don't create a new inode.

* Lots more test cases to check each of the fixed bugs.


Changes since 0.1.11:

* The index is now fetches as '.0inst-index.tgz' rathen than as '.xml'.
  This is faster (since it's compressed) and will allow us to send the
  digital signature and key at the same time in future.

* Make /uri/0install the mount-point, rather than /uri.
  (compatibility symlinks from /uri/http and /uri/0http are created for
   the change-over).

* 0test has been updated and slightly improved.


Changes since 0.1.10:

* There is now one index file per site, not one per directory.

* Sometimes when a download finished, 0show wasn't notified.

* Added a test system.

* Use RELAX NG to validate XML files.

* Lazyfs improvements:

	- Better diagnostics.

	- Should be better at detecting incompatible kernel versions.

	- Replaced old buggy readdir routine with generic dcache version.

	- Used to BUG if the helper released a dentry that noone else was
	  using.

* Use libxml instead of libexpat for XML parsing.

* Helper doesn't pass request handles to child (wget) processes, so they
  get closed at the right time.

* Scheme name is now '0http', not 'http'.

* New 'task' abstraction handles dependancies between tasks better (eg,
  a file request depends on an index fetch followed by an archive fetch).
