@@ -1,5 +1,5 @@
 AC_INIT(zero-install.c)
-AM_INIT_AUTOMAKE(zero-install, 0.1.13)
+AM_INIT_AUTOMAKE(zero-install, 0.1.14)
 AM_CONFIG_HEADER(Linux/config.h)
 AC_PROG_MAKE_SET
 
