@@ -3,6 +3,16 @@ Changes since 0.1.13:
 * 0refresh can be given a path and a date (like 0run), and only does
   the refresh if the path isn't recent enough.
 
+* Fixed bug in 0run where the executable was a directory.
+
+* Removed 0show. It wasn't much use, and ZeroProgress replaces it.
+
+* Added missing test_cases.py file to distribution.
+
+* Mount the /uri/0install filesystem automatically at install time.
+
+* Made zero-install slightly more verbose by default.
+
 Changes since 0.1.12:
 
 * Support compiling with older Linux 2.4.18 kernels (Joachim Kupke).
